--- a/src/common/language/cn/translation.json
+++ b/src/common/language/cn/translation.json
@@ -2,8 +2,21 @@
     "home": "首页",
     "storehouse": "仓库",
     "storehouse group": "仓库组",
-    "sys" : "系统设置",
-    "my": "我的",
+    "system" : "系统设置",
     "collection": "收藏",
-    "environment": "环境"
+    "environment": "环境",
+    "code":"代码",
+    "commits": "提交",
+    "branch": "分支",
+    "tag": "标签",
+    "merge": "合并请求",
+    "issue": "问题",
+    "pipeline": "流水线",
+    "statistics": "统计",
+    "setting": "设置",
+    "member": "成员",
+    "privilege": "权限",
+    "push_rules": "推送规则",
+    "access_keys": "访问密钥",
+    "survey": "概况"
 }
