备份修改 nav 调整

--- a/src/common/language/en.json
+++ b/src/common/language/en.json
@@ -33,6 +33,7 @@
     "Users": "Users",
     "Users Group": "Users Group",
     "Users Directory" : "Users Directory",
+    "Backups And Rec": "Backups And Rec",
     "Backups": "Backups",
     "Recover": "Recover"
 }
