--- a/src/common/language/zh.json
+++ b/src/common/language/zh.json
@@ -33,7 +33,8 @@
     "Users": "用户",
     "Users Group": "用户组",
     "Users Directory" : "用户目录",
+    "Backups And Rec": "备份与恢复",
     "Backups": "备份",
-    "Recover": "数据恢复"
+    "Recover": "恢复"
 
 }
